--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <ul class="nav-right-section">
                 <li><a href="https://www.gmail.com">Gmail</a></li>
                 <li><a href="https://www.google.com/imghp?hl=es-419&ogbl">Imágenes</a></li>
-                <li class="menu-icon"><a href="#"></a></li>
+                <li class="menu-icon"><a href="#"><img src="/img/icons8-menú-en-círculos-30.png" alt="" srcset=""></a></li>
                 <li class="nav-bar_pic-link"><a href="#"><img src="https://lh3.googleusercontent.com/ogw/ANLem4amHgzG6X_rZMtT_e9JaGxzCgJ1qbE6xam79zrGOA=s32-c-mo" alt="" srcset=""></a></li>
             </ul>
         </nav>
@@ -48,15 +48,10 @@
     </main>
    
     <footer>
-        <div>
-            <div>
-                Cuba
-            </div>
-            <div class="footer-down">
-                <div class="footer-left">
-                    <ul>
-                        <li><a href="https://about.google/?utm_source=google-CU&utm_medium=referral&utm_campaign=hp-footer&fg=1">Sobre Google</a></li>
-                        <li><a href="https://ads.google.com/intl/es-419_cu/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Publicidad</a></li>
+        <div class="footer-left">
+            <ul>
+                <li><a href="https://about.google/?utm_source=google-CU&utm_medium=referral&utm_campaign=hp-footer&fg=1">Sobre Google</a></li>
+                <li><a href="https://ads.google.com/intl/es-419_cu/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Publicidad</a></li>
                         <li><a href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1#?modal_active=none">Negocios</a></li>
                         <li><a href="https://www.google.com/search/howsearchworks/?fg=1">Cómo funciona la Búsqueda</a></li>
                     </ul>
@@ -68,8 +63,8 @@
                         <li><a href="#">Preferencias</a></li>
                     </ul>
                 </div>
-            </div>
-        </div>
+     
+        
     </footer>
 
 </body>
