--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <ul class="nav-right-section">
                 <li><a href="https://www.gmail.com">Gmail</a></li>
                 <li><a href="https://www.google.com/imghp?hl=es-419&ogbl">Imágenes</a></li>
-                <li class="menu-icon"><a href="#"><img src="/img/icons8-menú-en-círculos-30.png" alt="" srcset=""></a></li>
+                <li class="menu-icon"><a href="#"><img src="img/icons8-menú-en-círculos-30.png" alt="" srcset=""></a></li>
                 <li class="nav-bar_pic-link"><a href="#"><img src="https://lh3.googleusercontent.com/ogw/ANLem4amHgzG6X_rZMtT_e9JaGxzCgJ1qbE6xam79zrGOA=s32-c-mo" alt="" srcset=""></a></li>
             </ul>
         </nav>
